@startuml TradeMart_ERD
!define Table(name,desc) class name as "name\n=====\n" << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <i>x</i>

title Trade Mart Database ER Diagram

' Entities
Table(User, "User account information") {
    + primary_key(id): INTEGER
    + username: VARCHAR(80)
    + email: VARCHAR(120)
    + password: VARCHAR(120)
    + phone: VARCHAR(20)
    + address: VARCHAR(200)
    + user_type: VARCHAR(20)
    + is_verified: BOOLEAN
    + verification_code: VARCHAR(6)
    + verification_code_expires: DATETIME
    + identity_verified: BOOLEAN
    + id_document: VARCHAR(200)
    + selfie_document: VARCHAR(200)
    + avg_rating: FLOAT
    + total_ratings: INTEGER
    + is_suspended: BOOLEAN
    + suspend_reason: TEXT
    + suspended_at: DATETIME
    + foreign_key(suspended_by_id): INTEGER
    + created_at: VARCHAR(50)
}

Table(Category, "Product categories") {
    + primary_key(id): INTEGER
    + name: VARCHAR(50)
}

Table(Condition, "Product conditions") {
    + primary_key(id): INTEGER
    + name: VARCHAR(50)
}

Table(Product, "Products listed by sellers") {
    + primary_key(id): INTEGER
    + name: VARCHAR(100)
    + description: TEXT
    + price: FLOAT
    + negotiable: BOOLEAN
    + foreign_key(condition_id): INTEGER
    + image: VARCHAR(100)
    + foreign_key(category_id): INTEGER
    + foreign_key(seller_id): INTEGER
    + status: VARCHAR(20)
    + created_at: DATETIME
}

Table(Order, "Customer orders") {
    + primary_key(id): INTEGER
    + foreign_key(user_id): INTEGER
    + order_date: DATETIME
    + status: VARCHAR(20)
    + tracking_status: VARCHAR(50)
    + tracking_id: VARCHAR(20)
    + tracking_updates: JSON
    + estimated_delivery: DATETIME
    + delivery_address: TEXT
    + payment_method: VARCHAR(20)
    + total_amount: FLOAT
}

Table(OrderItem, "Items within orders") {
    + primary_key(id): INTEGER
    + foreign_key(order_id): INTEGER
    + foreign_key(product_id): INTEGER
    + quantity: INTEGER
    + price: FLOAT
}

Table(Cart, "Shopping cart items") {
    + primary_key(id): INTEGER
    + foreign_key(user_id): INTEGER
    + foreign_key(product_id): INTEGER
    + quantity: INTEGER
}

Table(Review, "Seller reviews by buyers") {
    + primary_key(id): INTEGER
    + foreign_key(reviewer_id): INTEGER
    + foreign_key(seller_id): INTEGER
    + rating: INTEGER
    + comment: TEXT
    + created_at: DATETIME
}

Table(Message, "Communication between users") {
    + primary_key(id): INTEGER
    + foreign_key(sender_id): INTEGER
    + foreign_key(receiver_id): INTEGER
    + foreign_key(product_id): INTEGER
    + content: TEXT
    + read: BOOLEAN
    + created_at: DATETIME
}

Table(Offer, "Price offers from buyers to sellers") {
    + primary_key(id): INTEGER
    + foreign_key(product_id): INTEGER
    + foreign_key(buyer_id): INTEGER
    + foreign_key(seller_id): INTEGER
    + offer_price: FLOAT
    + status: VARCHAR(20)
    + created_at: DATETIME
}

Table(BusinessVerification, "Business verification requests") {
    + primary_key(id): INTEGER
    + foreign_key(user_id): INTEGER
    + business_name: VARCHAR(100)
    + business_type: VARCHAR(50)
    + registration_number: VARCHAR(50)
    + business_address: VARCHAR(200)
    + business_document: VARCHAR(200)
    + status: VARCHAR(20)
    + reject_reason: TEXT
    + created_at: DATETIME
    + verified_at: DATETIME
    + foreign_key(verified_by_id): INTEGER
}

Table(VerificationActivity, "Audit log for verification actions") {
    + primary_key(id): INTEGER
    + foreign_key(verification_id): INTEGER
    + foreign_key(govt_employee_id): INTEGER
    + action: VARCHAR(20)
    + reason: TEXT
    + timestamp: DATETIME
}

Table(SuspensionActivity, "Audit log for seller suspensions") {
    + primary_key(id): INTEGER
    + foreign_key(seller_id): INTEGER
    + foreign_key(govt_employee_id): INTEGER
    + action: VARCHAR(20)
    + reason: TEXT
    + timestamp: DATETIME
}

' Relationships
User ||--o{ Product : "sells"
User ||--o{ Order : "places"
User ||--o{ Cart : "has"
User ||--o{ Review : "writes"
User ||--o{ Review : "receives"
User ||--o{ Message : "sends"
User ||--o{ Message : "receives"
User ||--o{ Offer : "makes"
User ||--o{ Offer : "receives"
User ||--|| BusinessVerification : "requests"
User ||--o{ VerificationActivity : "performs"
User ||--o{ SuspensionActivity : "performs"
User ||--o{ SuspensionActivity : "gets"

Category ||--o{ Product : "contains"
Condition ||--o{ Product : "has"

Product ||--o{ OrderItem : "appears in"
Product ||--o{ Cart : "added to"
Product ||--o{ Message : "discussed in"
Product ||--o{ Offer : "has"

Order ||--o{ OrderItem : "contains"

BusinessVerification ||--o{ VerificationActivity : "has"

' Self-referencing relationships
User ||--o{ User : "suspends"

legend right
|= Legend |
| PK | Primary Key |
| FK | Foreign Key |
| 1 | One |
| * | Many |
endlegend

@enduml
